--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	runtimeOnly 'com.h2database:h2'
-	compileOnly 'org.jcodec:jcodec:0.2.5'
-	compileOnly 'org.jcodec:jcodec-javase:0.2.5'
+//	compileOnly 'org.jcodec:jcodec:0.2.5'
+//	compileOnly 'org.jcodec:jcodec-javase:0.2.5'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
